restored simulation function

--- a/conin/mediation_variables/ICML_dna.ipynb
+++ b/conin/mediation_variables/ICML_dna.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c5a243af-db56-44e7-af89-1782eec95667",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import json\n",
-    "from copy.deepcopy(Munch import copy.deepcopy(Munch\n",
+    "from munch import Munch\n",
     "import itertools\n",
     "from collections import defaultdict\n",
     "import random\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "id": "9c49caa1-f703-4878-9114-fc57cb03ab53",
    "metadata": {},
    "outputs": [],
@@ -84,12 +84,12 @@
     "for i in range(hidden_size):\n",
     "    hmm_startprob[hidden_states[i]] = init_vec[i]\n",
     "\n",
-    "hmm = copy.deepcopy(Munch(states = hidden_states, emits = emit_states, tprob = hmm_transition, eprob = hmm_emit, initprob = hmm_startprob)"
+    "hmm = copy.deepcopy(Munch(states = hidden_states, emits = emit_states, tprob = hmm_transition, eprob = hmm_emit, initprob = hmm_startprob))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 7,
    "id": "29e5b64c-2cfd-4037-8969-9228f7c540ec",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 8,
    "id": "cefac4ef-bb55-41a3-bb1d-748192162043",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 9,
    "id": "57af1a3a-9b2b-4b96-9e0b-9780506a3f16",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "False"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 10,
    "id": "e79948ad-f7a1-4937-be0d-5f1d3f138e19",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 11,
    "id": "0e8868ef-b179-4ac6-a5ad-b2e98e8ce822",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 12,
    "id": "62e7a5ca-783f-4420-a0ce-0b6a8a095685",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 13,
    "id": "81f1acc6-9575-4cc3-be9e-f1ae6f51aaed",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 14,
    "id": "5ddddd9a-8692-4e5c-93cc-b151690edb41",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 15,
    "id": "fdb8367d-e975-45a2-ad27-b5b0ec23bcf5",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 16,
    "id": "0a33b075-8ad7-47ff-8604-d5ea8debb374",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 17,
    "id": "61065e0a-a21f-4f19-bc2f-a2f64a19c2c8",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 18,
    "id": "4018eef3-7381-4dda-8034-ae96198821d5",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 19,
    "id": "4b2561ca-137d-4c46-ba60-08adbfe71f4d",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 20,
    "id": "f8b47169-e095-43cb-a551-3f07a6fa795d",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 21,
    "id": "2d1cac05-7510-434e-925f-660b53e4d466",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 27,
+   "id": "cf4eb409-1444-41d5-b5f8-25d1789b10cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def single_simulation(hmm, time, stay=5, pro_before= 30, ix_list=None):\n",
+    "    '''\n",
+    "    Draws from hmm with addition constraint that we stay in each state for at least duration \"stay\"\n",
+    "    pro_before sets the maximum time horizon that promoter must occur by.\n",
+    "    '''\n",
+    "    # Get numpy version of hmm parameters\n",
+    "    hmm_params, ix_list = hmm2numpy(hmm, ix_list=ix_list, return_ix=True) \n",
+    "    init_prob, tmat, emat = hmm_params\n",
+    "\n",
+    "    # Prepare dictionary for converting one_hot back to states\n",
+    "    state_ix, emit_ix = ix_list\n",
+    "    state_ix = {v: k for k, v in state_ix.items()}\n",
+    "    emit_ix = {v: k for k, v in emit_ix.items()}\n",
+    "\n",
+    "\n",
+    "    # Generate (X1,Y1)\n",
+    "    x_curr = random_draw(init_prob)\n",
+    "    current_state = state_ix[np.argmax(x_curr)] # convert one-hot back to state\n",
+    "    x_list = [current_state] \n",
+    "    emit_dist = x_curr @ emat\n",
+    "    y_curr = random_draw(emit_dist)\n",
+    "    y_list = [emit_ix[np.argmax(y_curr)]]\n",
+    "\n",
+    "    x_prev = x_curr\n",
+    "\n",
+    "    #Initialize visit_trackers\n",
+    "    visit_pro = current_state == 'pro'\n",
+    "    visit_dis = current_state == 'dis'\n",
+    "    visit_enh = current_state == 'enh'\n",
+    "\n",
+    "    dis_visits = int(current_state == 'dis')\n",
+    "    \n",
+    "    # Initialize state stay counter\n",
+    "    stay_counter = 1\n",
+    "\n",
+    "    \n",
+    "    # Generate rest\n",
+    "    for t in range(1, time):\n",
+    "        # By Markov property, just clamp to current stay until stay for required time\n",
+    "        if stay_counter < stay:\n",
+    "            stay_counter += 1\n",
+    "        else:\n",
+    "            # Transition to a new state\n",
+    "            x_curr = random_draw(x_prev @ tmat)\n",
+    "            if np.argmax(x_prev) != np.argmax(x_curr):\n",
+    "                stay_counter = 1  # Reset stay counter for the new state\n",
+    "                current_state = state_ix[np.argmax(x_curr)]\n",
+    "                emit_dist = x_prev @ emat\n",
+    "\n",
+    "                x_prev = x_curr\n",
+    "\n",
+    "\n",
+    "                #Update visit_trackers\n",
+    "                visit_pro = visit_pro or current_state == 'pro'\n",
+    "                visit_dis = visit_dis or current_state == 'dis'\n",
+    "                visit_enh = visit_enh or current_state == 'enh'\n",
+    "\n",
+    "                if current_state == 'dis':\n",
+    "                #this condition already assumes transition to new state, so records new dis region.\n",
+    "                    dis_visits += 1\n",
+    "\n",
+    "        #Constraints\n",
+    "         #check we hit promoter by pro_before \n",
+    "        if t == int(pro_before) and (not visit_pro):\n",
+    "            return False\n",
+    "\n",
+    "        #pro < dis < enh\n",
+    "\n",
+    "        if (not visit_pro) and visit_dis:\n",
+    "            return False\n",
+    "\n",
+    "        if (not visit_dis) and visit_enh:\n",
+    "            return False\n",
+    "\n",
+    "        y_curr = random_draw(emit_dist)\n",
+    "        \n",
+    "        x_list.append(current_state)\n",
+    "        y_list.append(emit_ix[np.argmax(y_curr)])\n",
+    "\n",
+    "    #check if only one dis region\n",
+    "    if dis_visits != 1:\n",
+    "        return False\n",
+    "        \n",
+    "    return x_list, y_list\n",
+    "\n",
+    "def simulation(hmm, time, stay=5, pro_before=30, ix_list=None, max_attempts=1000):\n",
+    "    '''\n",
+    "    Repeatedly calls the simulation function until a valid full run is generated.\n",
+    "    Returns the first valid simulation (list of states and emissions).\n",
+    "    If no valid simulation is found within max_attempts, raises an exception.\n",
+    "    '''\n",
+    "    for attempt in range(max_attempts):\n",
+    "        result = single_simulation(hmm, time, stay=stay, pro_before=pro_before, ix_list=ix_list)\n",
+    "        if result is not False:\n",
+    "            return result  # Return the valid simulation\n",
+    "\n",
+    "    raise RuntimeError(f\"Failed to generate a valid simulation after {max_attempts} attempts.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "78b26e32-81f4-4c83-b101-77cef73f2ed9",
    "metadata": {},
    "outputs": [],
@@ -680,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 29,
    "id": "dd009b39-c4cb-4faa-9267-d1300aa38531",
    "metadata": {},
    "outputs": [],
@@ -698,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 31,
    "id": "9a72845a-daab-48ae-8227-01b2b7ba0584",
    "metadata": {},
    "outputs": [],
@@ -708,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 32,
    "id": "b75850ce-00a7-4254-96f2-1c48bdba299f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 33,
    "id": "1fab0532-c5b0-4ddf-87fb-706495def73e",
    "metadata": {},
    "outputs": [],
@@ -728,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 34,
    "id": "235c9af1-f840-43e0-a4d5-9fbb12be0381",
    "metadata": {},
    "outputs": [],
@@ -738,52 +844,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 38,
    "id": "b9450d5d-046a-4e83-b4a9-0d824530ba0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['int',\n",
-       " 'int',\n",
-       " 'int',\n",
-       " 'int',\n",
-       " 'pro',\n",
-       " 'pro',\n",
-       " 'pro',\n",
-       " 'pro',\n",
-       " 'pro',\n",
-       " 'pro',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'dis',\n",
-       " 'dis',\n",
-       " 'dis',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'ex2',\n",
-       " 'enh']"
+       "[('int', 'int'),\n",
+       " ('int', 'int'),\n",
+       " ('int', 'int'),\n",
+       " ('int', 'int'),\n",
+       " ('int', 'pro'),\n",
+       " ('int', 'pro'),\n",
+       " ('int', 'pro'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'pro'),\n",
+       " ('pro', 'pro'),\n",
+       " ('pro', 'pro'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'int'),\n",
+       " ('pro', 'ex1'),\n",
+       " ('ex2', 'ex1'),\n",
+       " ('ex2', 'ex1'),\n",
+       " ('ex2', 'ex1'),\n",
+       " ('ex2', 'dis'),\n",
+       " ('dis', 'dis'),\n",
+       " ('dis', 'dis'),\n",
+       " ('dis', 'ex1'),\n",
+       " ('ex1', 'ex1'),\n",
+       " ('ex1', 'ex1'),\n",
+       " ('ex1', 'ex2'),\n",
+       " ('enh', 'ex2'),\n",
+       " ('enh', 'ex2'),\n",
+       " ('enh', 'ex2')]"
       ]
      },
-     "execution_count": 628,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "opt_state_list"
+    "list(zip(opt_state_list,state_list))"
    ]
   },
   {
